--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,8 +3,7 @@ name: Build and Push img
 on:
   push:
     branches: [ "main", "develop" ]
-  pull_request:
-    branches: [ "main" ]
+  
 
 jobs:
 
@@ -13,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
@@ -20,7 +20,6 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Build and push image
-      uses: actions/checkout@v3
       run: |
         make build-img
         make push-img
