--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -15,6 +15,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
+    - uses: actions/checkout@v3
     - name: Build and push image
       run: |
         make build-img
