add units in timeout

--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -28,7 +28,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.ACTION_PRIVATE_KEY }}
-        timeout: 60
+        timeout: "60s"
         script: |
           make pull-img
           make run
