--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -28,6 +28,8 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.ACTION_PRIVATE_KEY }}
+        fingerprint: ${{ secrets.FINGERPRINT }}
+        debug: true
         timeout: "60s"
         script: |
           make pull-img
