--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -22,6 +22,7 @@ jobs:
         make build-img
         make push-img
 
+    - uses: actions/checkout@v3
     - name: Pull image and run container
       uses: appleboy/ssh-action@master
       with:
