--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -25,12 +25,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Pull image and run container
       uses: appleboy/ssh-action@master
-      with:
+      env:
+        IMAGE: ${{ secrets.REMOTE_IMAGE }}
+        API_PORT: ${{ secrets.API_PORT }}
+      with: 
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.ACTION_PRIVATE_KEY }}
-        debug: true
+        envs: IMAGE,API_PORT
         timeout: "60s"
         script: |
-          make pull-img
-          make run
+          docker pull $IMAGE:dev
+          docker run --name $IMAGE-server -p $API_PORT:80 $IMAGE
