--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -35,4 +35,4 @@ jobs:
         envs: IMAGE,API_PORT
         script: |
           docker pull $IMAGE:dev
-          docker run -dp 8000:80 $IMAGE
+          docker run -dp 8000:80 $IMAGE:dev
