--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -18,6 +18,9 @@ jobs:
     
     - uses: actions/checkout@v3
     - name: Build and push image
+      env:
+        ACCESS_KEY_ID: $${{ secrets.ACCESS_KEY_ID }}
+        SECRET_ACCESS_KEY: $${{ secrets.SECRET_ACCESS_KEY }}
       run: |
         make build-img
         make push-img
