--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -22,7 +22,7 @@ jobs:
         ACCESS_KEY_ID: $${{ secrets.ACCESS_KEY_ID }}
         SECRET_ACCESS_KEY: $${{ secrets.SECRET_ACCESS_KEY }}
       run: |
-        make build-img
+        make build-img ACCESS_KEY_ID=$ACCESS_KEY_ID SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY
         make push-img
 
     - uses: actions/checkout@v3
