--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -19,8 +19,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build and push image
       env:
-        ACCESS_KEY_ID: $${{ secrets.ACCESS_KEY_ID }}
-        SECRET_ACCESS_KEY: $${{ secrets.SECRET_ACCESS_KEY }}
+        ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
+        SECRET_ACCESS_KEY: $${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         make build-img ACCESS_KEY_ID=$ACCESS_KEY_ID SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY
         make push-img
