--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -39,4 +39,4 @@ jobs:
         script: |
           docker pull $IMAGE:dev
           docker stop app || true && docker rm app || true
-          docker run --name app -p ${API_PORT}:80 ${IMAGE}:dev
+          docker run --name app -dp ${API_PORT}:80 ${IMAGE}:dev
