--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -22,7 +22,7 @@ jobs:
         ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
         SECRET_ACCESS_KEY: $${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        make build-img ACCESS_KEY_ID=$ACCESS_KEY_ID SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY
+        make build-img ACCESS_KEY_ID=${ACCESS_KEY_ID} SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
         make push-img
 
     - uses: actions/checkout@v3
@@ -37,6 +37,6 @@ jobs:
         key: ${{ secrets.ACTION_PRIVATE_KEY }}
         envs: IMAGE,API_PORT
         script: |
-          docker pull $IMAGE:dev
+          docker pull ${IMAGE}:dev
           docker stop app || true && docker rm app || true
           docker run --name app -dp ${API_PORT}:80 ${IMAGE}:dev
