--- a/.github/workflows/pipeline-prod.yml
+++ b/.github/workflows/pipeline-prod.yml
@@ -22,7 +22,7 @@ jobs:
         ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
         SECRET_ACCESS_KEY: $${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        make build-img ACCESS_KEY_ID=${ACCESS_KEY_ID} SECRET_ACCESS_KEY=${SECRET_ACCESS_KEY}
+        make build-img
         make push-img
 
     - uses: actions/checkout@v3
